avoid overflow in channels menu for too long names

--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -259,6 +259,7 @@ header nav a {
  overflow-y: auto;
  display: inline-block;
  margin-bottom:25px;
+ overflow-x: hidden;
 }
 
 .vertical-menu a {
